# mathml

./: .gitattributes  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
docs/: .readthedocs.yaml  conf.py  generate_animation.py  index.rst  modules.rst  nueramic_mathml.rst  requirements.txt
docs/_static/charts/: BFGS-animation-dark.html  BFGS-animation-light.html  BRENT-animation-dark.html  BRENT-animation-light.html  GSS-animation-dark.html  GSS-animation-light.html  LINEAR-animation-dark.html  LINEAR-animation-light.html  LINEAR4D-animation-dark.html  LINEAR4D-animation-light.html  RBF-animation-dark.html  RBF-animation-light.html  ROC_CURVE-animation-dark.html  ROC_CURVE-animation-light.html  SPI-animation-dark.html  SPI-animation-light.html
docs/modules/: calculus.rst  ml_classification.rst  ml_metrics.rst  ml_optimize.rst  ml_regression.rst  multi_optimize.rst  one_optimize.rst  optimize.rst  visualize_animation.rst  visualize_ml_animation.rst  visualize_multi_animation.rst  visualize_one_animation.rst
docs/modules/multi-optimize/: bfgs.rst  constr-lagrangian.rst  gd-constant.rst  gd-fractional.rst  gd-nonlinear_conjugate.rst  gd-optimal.rst  log-barrier.rst  primal-dual.rst
docs/notes/: examples.rst  installation.rst
notebooks/: multi-optimize.ipynb
src/nueramic_mathml/: __init__.py  calculus.py  file.py  multi_optimize.py  one_optimize.py  optimize.py  support.py
src/nueramic_mathml/ml/: __init__.py  classification.py  metrics.py  optimize.py  regression.py
src/nueramic_mathml/visualize/: __init__.py  ml_animation.py  multi_animation.py  one_animation.py
tests/: calculus_test.py  history_test.py  ml_classification_test.py  ml_metrics_test.py  ml_optimize_test.py  ml_regression_test.py  multi_optimize_test.py  one_optimize_test.py  optimize_test.py
