[tool.poetry]
name = "nueramic_mathml"
version = "0.0.0"
description = "Math algorithms in ML on torch"
authors = [
    "Victor Barbarich <vktrbr@icloud.com>",
    "Adelina Tsoi <dlnxxts@gmail.com>"
]
license = "MIT"
readme = "README.md"

repository = "https://github.com/nueramic/mathml"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "nueramic_mathml", from = "src" }
]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nueramic/mathml/issues"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
