[tool.poetry]
name = "nueramic_mathml"
version = "0.0.1.11"
description = "Math algorithms in ML on torch"
authors = [
    "Victor Barbarich <vktrbr@icloud.com>",
    "Adelina Tsoi <dlnxxts@gmail.com>"
]
license = "MIT"
readme = "README.md"

repository = "https://github.com/nueramic/mathml"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "nueramic_mathml", from = "src" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nueramic/mathml/issues"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
torch = "^1.11.0"
numpy = "^1.21.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^5.0.1"
furo = "^2022.6.4"
sphinxcontrib-pseudocode = "^0.7.0"
sphinxcontrib-katex = "^0.8.6"
sphinx-copybutton = "^0.5.0"
scikit-learn = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
